--- a/projects/ircore/tsconfig.lib.json
+++ b/projects/ircore/tsconfig.lib.json
@@ -11,7 +11,8 @@
     "lib": [
       "dom",
       "es2018"
-    ]
+    ],
+    "strictPropertyInitialization": false
   },
   "exclude": [
     "src/test.ts",
