--- a/projects/ircore/package.json
+++ b/projects/ircore/package.json
@@ -3,7 +3,9 @@
   "version": "0.3.0",
   "peerDependencies": {
     "@angular/common": "^12.0.5",
-    "@angular/core": "^12.0.5"
+    "@angular/core": "^12.0.5",
+    "dexie": "^3.0.3",
+    "dexie-observable": "^3.0.0-beta.11"
   },
   "dependencies": {
     "tslib": "^2.1.0"
