--- a/projects/ircore/package.json
+++ b/projects/ircore/package.json
@@ -1,13 +1,12 @@
 {
   "name": "ircore",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "peerDependencies": {
-    "@angular/common": "^12.0.5",
-    "@angular/core": "^12.0.5",
-    "dexie": "^3.0.3",
-    "dexie-observable": "^3.0.0-beta.11"
+    "@angular/common": "^15.1.0",
+    "@angular/core": "^15.1.0"
   },
   "dependencies": {
-    "tslib": "^2.1.0"
-  }
+    "tslib": "^2.3.0"
+  },
+  "sideEffects": false
 }
